--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.323.0",
     "moment": "^2.30.1",
     "next": "14.1.0",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
